RESOLVED FIXED157292
REGRESSION: Page layout of Manga/Picture books and all Fixed Layout ePubs corrupted
https://bugs.webkit.org/show_bug.cgi?id=157292
Summary REGRESSION: Page layout of Manga/Picture books and all Fixed Layout ePubs cor...
Dean Jackson
Reported 2016-05-02 19:03:00 PDT
REGRESSION: Page layout of Manga/Picture books and all Fixed Layout ePubs corrupted
Attachments
Patch (1.55 KB, patch)
2016-05-02 19:06 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2016-05-02 19:06:51 PDT
Dean Jackson
Comment 2 2016-05-02 19:07:21 PDT
Dean Jackson
Comment 3 2016-05-02 19:18:01 PDT
Note You need to log in before you can comment on or make changes to this bug.