REGRESSION: Page layout of Manga/Picture books and all Fixed Layout ePubs corrupted https://bugs.webkit.org/show_bug.cgi?id=157292 <rdar://problem/25750144>

Reviewed by Tim Horton.

The scroll state restoration fixes caused a regression in UIWebViews.
Code in UIKit checks for a non-zero page scale in a history item, and
r199233 changed the initialization from 0 to 1.

* history/HistoryItem.h: Use 0 instead of 1 as the initial m_scale.

Canonical link: https://commits.webkit.org/175392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200356 268f45cc-cd09-0410-ab3c-d52691b4dbfc